# junctionx-bp-22

./: .dockerignore  .gitignore  Untitled-1.http  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: api-CI.yml  app-CI.yml  deployment.yaml  docker-image.yml  file-CI.yml  sh.yaml
compose/: docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
compose/chart/: values.yaml
compose/chart/templates/: api.deployment.yaml  api.service.yaml  app.deployment.yaml  app.service.yaml  file.deployment.yaml  file.service.yaml  ingress.yaml
compose/ingress/: nginx.conf
compose/standalone/: package.json  tsconfig.json
compose/standalone/src/: index.ts
compose/standalone/src/components/: registerApi.ts  registerApp.ts
docs/price-comparison/: api_request.sh  calc.py  currency_rates.py  data.ipynb  main.py  ppp_indices.csv  prc_ppp_ind_1_Data.csv  prc_ppp_ind_Label.csv  rates.json
lib/raven-plugin-koa/src/: plugin.ts
workspaces/api/: Dockerfile  package.json  tsconfig.json
workspaces/api/src/: index.ts  server.ts
workspaces/api/src/config/: initialTransactions.ts
workspaces/api/src/controllers/: CategoriesController.ts  CountriesController.ts  TraceController.ts  TransactionController.ts  UserController.ts
workspaces/api/src/models/: Account.ts  AccountModel.ts  (+4 more)
workspaces/app/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.cjs
workspaces/app/public/: manifest.json
workspaces/app/src/: App.tsx  AppWrapper.tsx  main.tsx  tracer.ts
workspaces/file/: Dockerfile  nginx.conf
(+74 files in other folders)
