[tool.poetry]
name = "junctionx-bp-22"
version = "0.1.0"
description = ""
authors = ["Marcell O <omarcell@yahoo.com>"]
readme = "README.md"
packages = [{include = "junctionx_bp_22"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
