[tool.poetry]
name = "junctionx-bp-22"
version = "0.1.0"
description = ""
authors = ["Marcell O <omarcell@yahoo.com>"]
readme = "README.md"
packages = [{include = "junctionx_bp_22"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
ipykernel = "^6.16.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
